Change some parts of cv page, Add scrollbar to cv page, Fix reply box issue on admin panel

--- a/client/src/styles/CV.css
+++ b/client/src/styles/CV.css
@@ -9,6 +9,9 @@
   border-width: 0.2vh;
   border-radius: 24px;
   border-color: white;
+  overflow-x: hidden;
+  overflow-y: auto;
+  scrollbar-color: #5ab2ff white;
 }
 
 .cv-grp-content {
